--- a/.github/workflows/releasebuild.yml
+++ b/.github/workflows/releasebuild.yml
@@ -1,11 +1,7 @@
 name: Full Build
 
 on:
-  release:
-    types:
-      - published
-
-  workflow_dispatch:
+  push:
 
 jobs:
   build_sdist:
@@ -60,10 +56,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        arch: [auto32, auto64, ARM64]
+        arch: [auto64]
     env:
       CIBW_ARCHS: ${{matrix.arch}}
       CIBW_TEST_SKIP: "*-win32"
+      CIBW_BUILD: "cp311-*"
       #CIBW_TEST_REQUIRES: pytest hypothesis pandas
       CIBW_TEST_REQUIRES: pytest hypothesis
       CIBW_TEST_COMMAND: pytest {package}/tests
@@ -93,118 +90,4 @@ jobs:
           name: artifact-${{ github.job }}-${{ strategy.job-index }}
           path: ./wheelhouse/*.whl
 
-  build_wheels_macos:
-    name: Build wheel on ${{ matrix.os }}/native
-    needs: [build_sdist]
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [macos-13, macos-14]
-    env:
-      CIBW_ARCHS: native
-      CIBW_TEST_SKIP: "pp*-macosx_*"
-      #CIBW_TEST_REQUIRES: pytest hypothesis pandas
-      CIBW_TEST_REQUIRES: pytest hypothesis
-      CIBW_TEST_COMMAND: pytest {package}/tests
-      CIBW_BUILD_VERBOSITY: 3
-      CIBW_PROJECT_REQUIRES_PYTHON: ">=3.8"
-
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: artifact-sdist
-          path: dist
-
-      - uses: actions/setup-python@v5
-
-      - name: Copy wheel
-        run: cp dist/*.tar.gz rapidfuzz.tar.gz
-
-      - name: Build wheels
-        uses: pypa/cibuildwheel@v2.20.0
-        with:
-          package-dir: rapidfuzz.tar.gz
-          output-dir: wheelhouse
-
-      - name: Upload wheels
-        uses: actions/upload-artifact@v4
-        with:
-          name: artifact-${{ github.job }}-${{ strategy.job-index }}
-          path: ./wheelhouse/*.whl
-
-  build_wheels_linux:
-    name: Build wheels on ubuntu-latest/${{matrix.arch}}/${{matrix.python_tag}}
-    needs: [build_sdist]
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        arch: [auto, aarch64, ppc64le, s390x]
-        python_tag: ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*", "pp38-*", "pp39-*", "pp310-*"]
-        exclude:
-          # PyPy builds not available for these platforms
-          - arch: ppc64le
-            python_tag: "pp38-*"
-          - arch: ppc64le
-            python_tag: "pp39-*"
-          - arch: ppc64le
-            python_tag: "pp310-*"
-          - arch: s390x
-            python_tag: "pp38-*"
-          - arch: s390x
-            python_tag: "pp39-*"
-          - arch: s390x
-            python_tag: "pp310-*"
-    env:
-      CIBW_ARCHS_LINUX: ${{matrix.arch}}
-      CIBW_BUILD: ${{matrix.python_tag}}
-      CIBW_TEST_SKIP: "{*_{aarch64,ppc64le,s390x},*musllinux_*,pp38-*}"
-      #CIBW_TEST_REQUIRES: pytest hypothesis pandas
-      CIBW_TEST_REQUIRES: pytest hypothesis
-      CIBW_TEST_COMMAND: pytest {package}/tests
-      # CIBW_TEST_COMMAND: "{package}/tools/seg_wrapper.sh pytest {package}/tests"
-      CIBW_BUILD_VERBOSITY: 3
-
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: artifact-sdist
-          path: dist
-
-      - uses: actions/setup-python@v5
-
-      - name: Copy wheel
-        run: cp dist/*.tar.gz rapidfuzz.tar.gz
-
-      - uses: docker/setup-qemu-action@v3
-        name: Set up QEMU
-
-      - name: Build wheel
-        uses: pypa/cibuildwheel@v2.20.0
-        with:
-          package-dir: rapidfuzz.tar.gz
-          output-dir: wheelhouse
-
-      - name: Upload wheels
-        uses: actions/upload-artifact@v4
-        with:
-          name: artifact-${{ github.job }}-${{ strategy.job-index }}
-          path: ./wheelhouse/*.whl
-
-  deploy-wheels:
-    if: github.event_name == 'release' && github.event.action == 'published'
-    needs: [build_wheels_windows, build_wheels_macos, build_wheels_linux, build_sdist]
-    name: deploy wheels to pypi
-    runs-on: ubuntu-latest
-    environment: pypi-release
-    permissions:
-      id-token: write
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          path: dist
-          pattern: artifact-*
-          merge-multiple: true
-
-      - uses: pypa/gh-action-pypi-publish@v1.9.0
+  
